// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DayOfWeekNames matches snapshot matches when header is not sticky 1`] = `
<div class="weekday">
  <p class="weekday__names">
    Mon
  </p>
  <p class="weekday__names">
    Tues
  </p>
  <p class="weekday__names">
    Wed
  </p>
  <p class="weekday__names">
    Thu
  </p>
  <p class="weekday__names">
    Fri
  </p>
  <p class="weekday__names">
    Sat
  </p>
  <p class="weekday__names">
    Sun
  </p>
</div>
`;

exports[`DayOfWeekNames matches snapshot matches when header is sticky 1`] = `
<div class="weekday sticky">
  <p class="weekday__names">
    Mon
  </p>
  <p class="weekday__names">
    Tues
  </p>
  <p class="weekday__names">
    Wed
  </p>
  <p class="weekday__names">
    Thu
  </p>
  <p class="weekday__names">
    Fri
  </p>
  <p class="weekday__names">
    Sat
  </p>
  <p class="weekday__names">
    Sun
  </p>
</div>
`;
